<resources>
    <string name="app_name">Patacoré</string>

    <!--Login-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome JOHANA !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">Username</string>
    <!--card-->
    <string name="text_categoria">Platos Especiales</string>
    <string name="textdate_card">fecha y hora del pedido</string>
    <string name="textdatact_card">date</string>
    <string name="textdate_menu">27 10 2019</string>
    <string name="txt_nombre">Bandeja Paisa</string>
    <string name="txt_precio">$20.000</string>


    <!--tabs-->
    <string name="tab_new">Nuevo</string>
    <string name="tab_add">Add</string>
    <string name="tab_listar">Listar</string>
    <string name="tab_del">Del</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nueva_orden_fragment">Nueva orden</string>
    <string name="textPed">Pedido En Preparacion</string>
    <string name="textList">Listo Para Servir</string>
    <string name="textServido">Pedido Servido</string>
    <!--toolbar-->
    <string name="nro_mesa">MESA 1</string>
    <string name="txt_estado_toolbar">Servido</string>
    <string name="txt_cantidad">5</string>
    <string name="text_cantidad">10</string>
    <string name="txt_cantidad_p">Platos</string>
    <string name="title_anota_detall">Anotaciones</string>
    <string name="cont_anot_detall">mas pollo, mas ensalada, sin arroz</string>
    <string name="txt_menu">papa, yuca, arroz, pollo</string>
    <string name="txt_info_menu">Contiene:</string>
    <string name="tab_menu">menu</string>
    <string name="tab_pedido">pedido</string>
    <string name="txt_mesa">1</string>
    <string name="txt_description">pollo,arroz</string>

</resources>
