<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:cardview="http://schemas.android.com/tools"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_margin="10dp"
android:layout_width="match_parent"
android:layout_height="@dimen/list_height_ped"
android:id="@+id/menuCard">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_height_ped"
    android:orientation="horizontal"
    android:background="@color/colorSecondary">
    <ImageView
        android:id="@+id/img_card_list"
        android:layout_width="@dimen/img_card_list"
        android:layout_height="@dimen/img_card_list"
        android:background="@drawable/macet"
        android:layout_margin="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">
        <Button
            android:id="@+id/btnPrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_categoria"
            android:background="@color/colorSecondary"
            android:textColor="@color/colorPrimary"
            android:textAlignment="viewStart"
            android:gravity="center"
            cardview:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_nombre"
                android:textColor="@color/colorBG"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cantidad"
                android:textColor="@color/colorBG"
                android:paddingLeft="20dp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_precio"
            android:textColor="@color/colorBG"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/textDateCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textdate_card"
                android:textColor="@color/colorBG"
                android:textSize="@dimen/secondstitle_Card"/>

            <TextView
                android:id="@+id/textDatActCard"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/textdatact_card"
                android:textColor="@color/colorBG"
                android:textSize="@dimen/date_card"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>

