<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.PedidoDetalleActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_drtailpedido"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:contentScrim="@color/colorPrimary">
            <ImageView
                android:id="@+id/imgPedidoDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/panadero"
                app:layout_collapseMode="parallax"
                />



        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/pedidoDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_categoria"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txtNombreDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtInfoMenuDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_info_menu"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtMenuDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtCantidadDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cantidad_p"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/numCantidadDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cantidad"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
            <View                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                ></View>
            <TextView
                android:id="@+id/titleAnotaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_anota_detall"
                android:textSize="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtContAnotaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont_anot_detall"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:padding="10dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>