<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_height_ped"
    android:id="@+id/menuCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height_ped"
        android:orientation="horizontal"
        android:background="@color/colorSecondary">
        <ImageView
            android:id="@+id/img_card_menu"
            android:layout_width="@dimen/img_card_list"
            android:layout_height="@dimen/img_card_list"
            android:background="@drawable/macet"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtIdMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="id"
                    android:paddingRight="20dp"
                   />
                <TextView
                    android:id="@+id/btnPrep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_categoria"
                    android:background="@color/colorSecondary"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="viewStart"
                    android:gravity="center"
                    cardview:ignore="RtlCompat" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtNombreMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_nombre"
                android:textColor="@color/colorBG"/>
            <TextView
                android:id="@+id/txtPrecioMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_precio"
                android:textColor="@color/colorBG"/>
            <TextView
                android:id="@+id/txtDescriptionMenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/txt_description"
                android:textColor="@color/colorBG"/>

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

