<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".view.LoginActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:weightSum="1">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/LogoPatacore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:src="@drawable/logopatacoreinvy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                </androidx.appcompat.widget.AppCompatImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/gEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icFace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_face"
                        android:layout_marginLeft="@dimen/iconLoginLeft"
                        android:theme="@style/IconLoginColor"
                        android:layout_gravity="center">

                    </androidx.appcompat.widget.AppCompatImageView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiEmail"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextLogin"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/iconLoginLeft"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/zerodp"
                            android:hint="@string/hint_username"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            >

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/gPwrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/gEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icLock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock"
                        android:theme="@style/IconLoginColor"
                        android:layout_marginLeft="@dimen/iconLoginLeft"
                        android:layout_gravity="center">

                    </androidx.appcompat.widget.AppCompatImageView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiPwrd"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextLogin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/iconLoginLeft"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/zerodp"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>



                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/title_activity_login"
                    android:theme="@style/ButtonDarkLogin"
                    android:onClick="goMenuPrincipal"
                    app:layout_constraintTop_toBottomOf="@+id/gPwrd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                </Button>

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login"
                   >

                </ProgressBar>


            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>